// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prettier default 1`] = `
"# Node
**/node_modules
**/package.json
**/package-lock.json

# Generated
**/bower.json
**/lerna.json

# Build
**/build
**/dist
**/public
**/coverage
**/storybook-static
**/.next

# Nitro
**/project/blueprints
**/.yo-rc.json"
`;

exports[`prettier default 2`] = `
"module.exports = require('@namics/prettier-config');
"
`;

exports[`prettier default 3`] = `
"{
  \\"scripts\\": {
    \\"prettier\\": \\"prettier --write \\\\\\"**/*.*(js|jsx|ts|tsx|json)\\\\\\"\\"
  },
  \\"devDependencies\\": {
    \\"@namics/prettier-config\\": \\"0.3.0\\",
    \\"prettier\\": \\"1.18.2\\"
  }
}"
`;

exports[`prettier default 4`] = `
Array [
  .prettierignore,
  .prettierrc.js,
  package.json,
]
`;

exports[`prettier with-githooks 1`] = `
# ~/.huskyrc
# Note: it will run in /bin/sh shell
if command -v nodenv >/dev/null 2>&1; then
  eval "$(nodenv init -)"
fi
`;

exports[`prettier with-githooks 2`] = `
# Node
**/node_modules
**/package.json
**/package-lock.json

# Generated
**/bower.json
**/lerna.json

# Build
**/build
**/dist
**/public
**/coverage
**/storybook-static
**/.next

# Nitro
**/project/blueprints
**/.yo-rc.json
`;

exports[`prettier with-githooks 3`] = `
module.exports = require('@namics/prettier-config');

`;

exports[`prettier with-githooks 4`] = `
{
  "lint-staged": {
    "*.{js,jsx,ts,tsx,json}": [
      "prettier --write",
      "git add"
    ]
  },
  "scripts": {
    "prettier": "prettier --write /"**/*.*(js|jsx|ts|tsx|json)/""
  },
  "husky": {
    "hooks": {
      "pre-commit": "lint-staged"
    }
  },
  "devDependencies": {
    "@namics/prettier-config": "0.3.0",
    "husky": "3.0.9",
    "lint-staged": "9.4.2",
    "prettier": "1.18.2"
  }
}
`;

exports[`prettier with-githooks 5`] = `
Array [
  .huskyrc,
  .prettierignore,
  .prettierrc.js,
  package.json,
]
`;
